--- a/style.css
+++ b/style.css
@@ -173,8 +173,171 @@ h3 {
 
 /* #endregion contact */
 
+/* #region qui sommes nous */
+
+.container_story {
+    
+    margin: 0;
+    margin-top: 5vw;
+    width: 100%;
+    background-color: #A2D2FF;
+    overflow: hidden;
+    margin-bottom: 5vw;
+    padding-bottom: 3vw;
+}
+.container_story_blanc {
+    
+    margin: 0;
+    margin-top: 5vw;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 5vw;
+    padding-bottom: 3vw;
+}
+.story_img {
+    width: 100%;
+    border-radius: 20px;
+    min-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+
+}
+.semi_paragraph {
+    margin-left: 2vw;
+    margin-right: 2vw;
+    min-width: 200px;
+}
+.full_paragraph {
+    margin-left: 30px;
+}
+.container_story div h3 {
+    margin-top: 2vw;
+}
+.container_valeurs {
+    
+    margin: 0;
+    margin-top: 5vw;
+    overflow: hidden;
+    margin-bottom: 5vw;
+    padding-bottom: 3vw;
+}
+.container_valeurs div div ul li:has(h4){
+    margin-left: -1vw;
+    list-style-type: none;
+}
+.container_valeurs div div ul li:has(:not(h4)){
+    margin-top: 1vw;
+}
+.valeurs_img {
+    width: 100%;
+    border-radius: 20px;
+    min-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+
+}
+.container_valeurs div div ul{
+    margin-left: 1vw;
+}
+.container_team {
+    width: 100%;
+    overflow: visible;
+}
+.card_team {
+    background-color: #A2D2FF;
+    border-top-left-radius: 210px;
+    border-top-right-radius: 210px;
+    margin-bottom: 8vw;
+    margin: 0 10px;
+}
+.card_team:hover{
+    scale: 1.05;
+    z-index: 100;
+    box-shadow: 5px 10px 18px rgba(0, 0, 0, 0.5);
+}
+.card_team img {
+    border-radius: 100%;
+    padding: 0.2vw;
+}
+.card_team h5 {
+    color: #3f474f;
+}
 
 
+/* #endregion qui sommes nous */
+/* #region Bande rythmo */
+
+.slider-container {
+    margin-top: 3vw;
+    width: 100%;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    padding: 30px;
+    background-color: #c9b5da;
+    border-radius: 10px;
+}
+.slider-content {
+    display: flex;
+
+
+}
+.slider-content iframe {
+    width: 100%;
+    height: 90%;
+    margin: 10px;
+    border-radius: 10px;
+}
+.slider-content iframe:hover {
+    transform: scale(1.1);
+    box-shadow: 5px 10px 18px rgba(0, 0, 0, 0.5);
+    transition: 250ms;
+}
+.slider-container h4 {
+    margin-top: -5px;
+}
+.playlist div{
+    background-color: #0f0f0f;
+    width: 100%;
+    border: none;
+    border-radius: 20px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+.playlist div div h4 {
+    color: #ededed;
+}
+.playlist div div p {
+    color: #a1a1a1;
+}
+.playlist {
+    display: block;
+    width: 70%;
+    text-decoration: none;
+}
+.playlist:hover {
+    filter: brightness(0.8);
+    transform: scale(1.1);
+    transition: 250ms;
+}
+.playlist div img{
+    border-radius: 20px;
+}
+.tuto_video {
+    margin: 1vw;
+    border-radius: 10px;
+}
+.tuto_video:hover {
+    transform: scale(1.1);
+    box-shadow: 5px 10px 18px rgba(0, 0, 0, 0.5);
+    transition: 250ms;
+}
+.playlist_h3 {
+    margin-left: 0;
+}
+
+/* #endregion Bande rythmo */
 
 
 
@@ -194,17 +357,17 @@ h3 {
     background-color: #111111;
     padding: 20px 0px;
     width: 100vw;
-    padding-left: 30%;
     padding-top: 20px;
+    display: grid;
+    grid-template-columns: auto 80px 60px 60px 60px 60px auto;
 }
 .footer_reseaux a {
     width: fit-content;
-    max-height: 60px;
-    height: 6vw;
+    height: 60px;
 }
 .footer_reseaux a img {
     margin: 0px 20px;
-    height: 5vw;
+    height: 60px;
     max-height: 50px;
 }
 .footer_reseaux a:hover {
